[gd_scene load_steps=15 format=3 uid="uid://cxdnvmiyv6frd"]

[ext_resource type="Script" path="res://FigControler.gd" id="1_p4lwa"]
[ext_resource type="PackedScene" uid="uid://vtbmf474is8g" path="res://Scenes/frog.tscn" id="2_kr04m"]
[ext_resource type="AudioStream" uid="uid://cq6y4ell7qg76" path="res://Sounds/Jumping.mp3" id="3_doepp"]
[ext_resource type="AudioStream" uid="uid://j4xss02mlykv" path="res://Sounds/CrashSquish.mp3" id="4_o5or1"]
[ext_resource type="AudioStream" uid="uid://b1ure06dbdnm3" path="res://Sounds/WaterSplash.mp3" id="5_7jjrf"]
[ext_resource type="AudioStream" uid="uid://bv6hr1tkd10db" path="res://Sounds/BurnSound.mp3" id="6_rlxtf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e7g1d"]
size = Vector3(2.1, 3, 2.1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4gepn"]
radius = 1.25
height = 5.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tnssm"]
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_max = 90.0
spread = 100.0
flatness = 1.0
initial_velocity_min = 1.0
initial_velocity_max = 1.0
angular_velocity_min = -60.0
angular_velocity_max = 60.0
gravity = Vector3(0, 5, 0)
turbulence_enabled = true
turbulence_noise_scale = 1.0
turbulence_noise_speed_random = 0.1
turbulence_influence_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u17j1"]
albedo_color = Color(0.85098, 1, 0.0117647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jn5g4"]
material = SubResource("StandardMaterial3D_u17j1")
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_adc77"]
direction = Vector3(0, 1, 0)
initial_velocity_min = 3.0
initial_velocity_max = 4.0
angular_velocity_min = -45.0
angular_velocity_max = 45.0
gravity = Vector3(0, -1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gnnic"]
albedo_color = Color(0, 0.552941, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_02upv"]
material = SubResource("StandardMaterial3D_gnnic")
size = Vector3(0.1, 0.1, 0.1)

[node name="Node3D" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_p4lwa")

[node name="Frog" parent="." instance=ExtResource("2_kr04m")]

[node name="Area3D" type="Area3D" parent="Frog"]

[node name="PowerBox" type="CollisionShape3D" parent="Frog/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_e7g1d")

[node name="RayCast3D" type="RayCast3D" parent="Frog"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)
collide_with_areas = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.020874, 0.952907, 0)
shape = SubResource("CapsuleShape3D_4gepn")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0, 20, 10)
fov = 85.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_doepp")
volume_db = -5.0

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_o5or1")
volume_db = -5.0

[node name="SpeedParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.269151, 0)
emitting = false
amount = 32
lifetime = 0.75
process_material = SubResource("ParticleProcessMaterial_tnssm")
draw_pass_1 = SubResource("BoxMesh_jn5g4")

[node name="splashParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 64
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_adc77")
draw_pass_1 = SubResource("BoxMesh_02upv")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_7jjrf")
volume_db = -5.0

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="winCam" type="Camera3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 15, 20)

[node name="BurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rlxtf")
volume_db = -2.0

[connection signal="area_shape_entered" from="Frog/Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Frog/Area3D" to="." method="_on_area_3d_area_shape_exited"]
[connection signal="body_entered" from="Frog/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="finished" from="splashParticles" to="." method="_on_splash_particles_finished"]
